# COSC2753-a1

./: .gitignore  COSC2753_a1_s4000577_LeMinhDuc.docx
code/: COSC2753_A1_s4000577.ipynb  decision_tree.py  logistic_regression.py  logistic_regression_evaluation.ipynb  models_evaluations.ipynb  pyproject.toml  random_forest.py
code/data/: COSC2753_A1_Predictions_decision_tree_s4000577.csv  COSC2753_A1_Predictions_logistic_regession_s4000577.csv  COSC2753_A1_Predictions_random_forest_s4000577.csv  s4000577_logistic_regression.csv  s4000577_predictions_decision_tree.csv  s4000577_predictions_random_forest.csv
