[tool.poetry]
name = "a1"
version = "0.1.0"
description = ""
authors = ["Duc Le <s4000577@rmit.edu.vn>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
numpy = "^1.26.4"
scikit-learn = "^1.4.1.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"