[tool.poetry]
name = "code"
version = "0.1.0"
description = ""
authors = ["Duc Le <dealoux@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.4.1.post1"
scipy = "^1.13.0"
matplotlib = "^3.8.4"
pandas = "^2.2.1"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
